@@ -1,3 +1,7 @@
+Tue Dec  3 14:05:49 2013  Masaki Matsushita  <glass.saga@gmail.com>
+
+	* array.c (rb_ary_uniq_bang): remove duplicate code.
+
 Tue Dec  3 13:40:42 2013  Masaki Matsushita  <glass.saga@gmail.com>
 
 	* array.c (ary_add_hash): set and return values because string keys
